# AutomationDesktopBot

./: .gitignore  README.md  example.env  products_code.txt  pyproject.toml  requirements.txt  run.bat
.github/workflows/: exec.yml  message_discord.yml
report/: log.html  output.xml  report.html
resource/: lib.resource  linkedin.resource  priceLib.resource
scripts/: check.py  fetchEmbed.py  readDotEnv.py  readFiles.py  sendFile.py
src/: price.robot
src/linkedinbot/: linkedin.robot
test/: price.robot  teste.robot
