[project]
name = "automationdesktopbot"
version = "0.1.0"
description = ""
authors = [
    {name = "T-Terra",email = "gabst138@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "robotframework (==7.2.2)",
    "robotframework-seleniumlibrary (==6.7.0)",
    "discord-py (==2.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
